--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run script file
       run: |
-         git update-index --chmod=+x "https://github.com/Methamphetamine/bash-warp-generator/warp_generator.sh"
+         git update-index --chmod=+x https://github.com/Methamphetamine/bash-warp-generator/warp_generator.sh
          
       shell: bash
