--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Run script file
       run: |
         chmod +x warp_generator.sh
-         
+        ./warp_generator.sh
       shell: bash
